--- a/css/style.css
+++ b/css/style.css
@@ -184,9 +184,15 @@ header #nav-bar a:hover {
  overflow: hidden;
 }
 
+#portfolio #showcase .project .img {
+  width: 250px;
+  height:250px;
+  margin: auto;
+}
+
 #portfolio #showcase .project .img img {
   width: 100%;
-  height: 200px;
+  height: auto;
   border-radius: 4px;
   transition: 50ms;
 }
