--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,20 @@ header {
   color: #F7F7F7;
   border-bottom: solid 2px #EF8354;
   margin-bottom: 25px;
+  position: relative;
+  overflow: hidden;
+}
+
+header > img {
+  position: absolute;
+  top: 3px;
+  left: -2px;
 }
 
 header #title {
-  padding: 5px 10px;
+  padding: 4px 31px;
+  z-index: 1;
+  position: relative;
 }
 
 header #title h1 {
@@ -48,7 +58,7 @@ header #title p {
 }
 
 header #title p span {
-  color: #EF8354;
+  color: #2D3142;
 }
 
 /* Header Navigation */
