--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,11 @@ header > img {
 }
 
 header #title {
-  padding: 4px 31px;
+  padding: 0 31px;
   z-index: 1;
   position: relative;
+  height: 82px;
+  overflow: hidden;
 }
 
 header #title h1 {
@@ -54,13 +56,10 @@ header #title h1 {
 
 header #title p {
   margin: 0;
-  font-size: 1.1em;
+  font-size: 1.3em;
   position: relative;
   left: 0px;
   top: 5px;
-}
-
-header #title p span {
   color: #2D3142;
 }
 
@@ -101,9 +100,10 @@ header #nav-bar a:hover {
 }
 
 /* About */
-#about h2 {
+#about h2, #portfolio h2 {
   text-align: center;
   font-size: 1.4em;
+  flex-basis: 100%;
 }
 
 #about #information {
@@ -121,6 +121,9 @@ header #nav-bar a:hover {
   text-align: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   margin-bottom: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 #about #skills .skill img:hover {
@@ -171,10 +174,6 @@ header #nav-bar a:hover {
 }
 
 /* Portfolio */
-#portfolio h2 {
-  text-align: center;
-  font-size: 1.4em;
-}
 
 #portfolio #showcase {
   margin-bottom: 25px;
@@ -192,7 +191,7 @@ header #nav-bar a:hover {
  border: 1px solid #F7F7F7;
  background-color: #F7F7F7;
  border-radius: 5px;
- box-shadow: 2px 1px 2px 3px #2D3142;
+ box-shadow: 2px 2px 15px 1px #2D3142;
  padding: 7px;
  overflow: hidden;
 }
@@ -311,7 +310,7 @@ footer {
     text-align: left;
   }
 
-  #about h2 {
+  #about h2, #portfolio h2 {
     font-size: 1.4em;
     text-align: center;
   }
@@ -372,7 +371,7 @@ footer {
     padding-left: 85px;
   }
 
-  #about h2 {
+  #about h2, #portfolio h2 {
     font-size: 1.7em;
   }
 
